# Eco-Enterprise

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROD_CHECKLIST.md  README.md  README_BADGES_PATCH.md  SECURITY.md  docker-compose.yml  pyproject.toml  test_out.txt  tmp_enrich.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml
backend/: .env.development  .env.production  cli.py  pytest_log.txt  requirements.txt
backend/app/: auth.py  config.py  db.py  ingestion_engine.py  ledger_engine.py  logging_config.py  main.py  middleware.py  ml_engine.py  ml_ops.py  schemas.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  ledger.py
backend/app/ml/: train.py
backend/data/: dpp_data.csv  security_model.pkl  sustainability.db  v7_sustainability.db
backend/tests/: stress_test.py  test_api.py  test_ml_ops.py  test_recommender.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_phase5.py
data/: sample_esg_telemetry.json
docs/: ARCHITECTURE.md  DECISIONS.md  USE_CASES.md
frontend/: dashboard.py
notebooks/: colab_validation.ipynb
scripts/: ingest_sample.py
